--- a/Pitt_ET/FLASH/makefile.local
+++ b/Pitt_ET/FLASH/makefile.local
@@ -5,6 +5,6 @@
 ################################################################################
 
 export GNU_Make_Install_DirEnv=$(CWInstallLocationEnv)/gnu/bin
-export ProjDirPath=C:/Users/Martina M/Documents/HSLU_PREN Projekt Beispiele/PREN2/PREN_ET/Pitt_ET
-export CWInstallLocationEnv=C:/Users/Martina M/Documents/HSLU_PREN Projekt Beispiele/Freescale/CW MCU v10.6
+export ProjDirPath=C:/Users/famga/Desktop/HSLU/FS17/PREN2/Freedom/PREN_ET/Pitt_ET
+export CWInstallLocationEnv=C:/Freescale/CW MCU v10.6.2
 export ARMSourceryDirEnv=$(CWInstallLocationEnv)/Cross_Tools/arm-none-eabi-gcc-4_7_3/bin
