--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+Debug/
+Documentation/
+Generated_Code/
+*.g_c
+*.g_x
+Project_Settings/Components_DEBUG
+/.settings
+ProjectInfo.xml
+.cwGeneratedFileSetLog
+
 # Object files
 *.o
 *.ko
